--- a/serverless.yaml
+++ b/serverless.yaml
@@ -4,8 +4,8 @@ provider:
   name: aws
   runtime: nodejs14.x
   stage: dev
-  region: us-east-1
-  env:
+  region: us-west-1
+  environment:
     DYNAMODB_TABLE_NAME: ${self:custom.postsTableName}
 
 custom:
@@ -22,74 +22,74 @@ functions:
     timeout: 5 # seconds
     events:
       - http:
-        path: post/${postId}
-        method: GET
+          path: post/{postId}
+          method: GET
     iamRoleStatements:
       - Effect: "Allow"
         Action:
           - "dynamodb:GetItem"
         Resource: !GetAtt PostsTable.Arn
-    createPost:
-      handler: api.createPost
-      name: create-post
-      memorySize: 128 # mb
-      timeout: 5 # seconds
-      events:
-        - http:
+  createPost:
+    handler: api.createPost
+    name: create-post
+    memorySize: 128 # mb
+    timeout: 5 # seconds
+    events:
+      - http:
           path: post
           method: POST
-      iamRoleStatements:
-        - Effect: "Allow"
-          Action:
-            - "dynamodb:PutItem"
-          Resource: !GetAtt PostsTable.Arn
-    updatePost:
-      handler: api.updatePost
-      name: update-post
-      memorySize: 128 # mb
-      timeout: 5 # seconds
-      events:
-        - http:
+    iamRoleStatements:
+      - Effect: "Allow"
+        Action:
+          - "dynamodb:PutItem"
+        Resource: !GetAtt PostsTable.Arn
+  updatePost:
+    handler: api.updatePost
+    name: update-post
+    memorySize: 128 # mb
+    timeout: 5 # seconds
+    events:
+      - http:
           path: post/{postId}
           method: PUT
-      iamRoleStatements:
-        - Effect: "Allow"
-          Action:
-            - "dynamodb:UpdateItem"
-          Resource: !GetAtt PostsTable.Arn
-    deletePost:
-      handler: api.deletePost
-      name: delete-post
-      memorySize: 128 # mb
-      timeout: 5 # seconds
-      events:
-        - http:
+    iamRoleStatements:
+      - Effect: "Allow"
+        Action:
+          - "dynamodb:UpdateItem"
+        Resource: !GetAtt PostsTable.Arn
+  deletePost:
+    handler: api.deletePost
+    name: delete-post
+    memorySize: 128 # mb
+    timeout: 5 # seconds
+    events:
+      - http:
           path: post/{postId}
           method: DELETE
-      iamRoleStatements:
-        - Effect: "Allow"
-          Action:
-            - "dynamodb:DeleteItem"
-          Resource: !GetAtt PostsTable.Arn
-    getAll:
-      handler: api.getAllPosts
-      name: get-all-posts
-      memorySize: 128 # mb
-      timeout: 5 # seconds
-      events:
-        - http:
+    iamRoleStatements:
+      - Effect: "Allow"
+        Action:
+          - "dynamodb:DeleteItem"
+        Resource: !GetAtt PostsTable.Arn
+  getAllPosts:
+    handler: api.getAllPosts
+    name: get-all-posts
+    memorySize: 128 # mb
+    timeout: 5 # seconds
+    events:
+      - http:
           path: posts
           method: GET
-      iamRoleStatements:
-        - Effect: "Allow"
-          Action:
-            - "dynamodb:Scan"
-          Resource: !GetAtt PostsTable.Arn
+    iamRoleStatements:
+      - Effect: "Allow"
+        Action:
+          - "dynamodb:Scan"
+        Resource: !GetAtt PostsTable.Arn
 
 resources:
   Resources:
     PostsTable:
-      Type: AWS::DyamoDB::Table
+      Type: AWS::DynamoDB::Table
       Properties:
         TableName: ${self:custom.postsTableName}
         AttributeDefinitions:
